--- a/package.json
+++ b/package.json
@@ -1,37 +1,30 @@
 {
-  "name": "my-app",
+  "name": "basic_carting_app",
   "version": "0.0.1",
   "description": "A sample application for demonstrating web development skills",
+  "main": "src/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "vite build",
+    "dev": "vite",
+    "start": "node src/index.js"
+  },
+  "repository": {
+    "type": "git"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.7",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "vite": "^2.7.10"
+  },
   "engines": {
     "node": ">=10.15.3"
-  },
-  "main": "server.js",
-  "scripts": {
-    "start": "grunt && node server.js",
-    "test": "test"
-  },
-  "repository": "git+https://github.com/Crazy-Alpaca/Web-Developer-Test.git",
-  "keywords": [
-    "webdev",
-    "test"
-  ],
-  "author": "Various",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Crazy-Alpaca/Web-Developer-Test/issues"
-  },
-  "homepage": "https://github.com/Crazy-Alpaca/Web-Developer-Test#readme",
-  "devDependencies": {
-    "grunt": "^1.0.4",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-uglify": "^4.0.1",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-sass": "^3.0.2",
-    "http-server": "^0.12.3",
-    "node-sass": "^4.14.1"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
   }
 }
