--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "vite build",
     "dev": "vite",
-    "start": "node src/index.js"
+    "start": "node ./api/index.js",
+    "postinstall": "(cd api && npm install); (npm run build)"
   },
   "repository": {
     "type": "git"
@@ -15,12 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.7",
-    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "vite": "^2.7.10"
   },
