wrapping up the codebase

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "vite build",
     "dev": "vite",
-    "start": "node ./api/index.js",
+    "start": "npm start --prefix api",
     "postinstall": "(cd api && npm install); (npm run build)"
   },
   "repository": {
