--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,7 @@
     "helmet": "^3.21.0",
     "knex": "^0.95.15",
     "sqlite3": "^5.0.2",
-    "swagger-ui-express": "^4.1.1",
-    "winston": "^3.2.1",
-    "yamljs": "^0.3.0"
+    "winston": "^3.2.1"
   },
   "engines": {
     "node": ">=10.15.3"
